--- a/index.html
+++ b/index.html
@@ -9,6 +9,33 @@
     <script src="main.js" defer></script>
 </head>
 <body>
-    
+    <div id="calculator">
+        <div class="display"> 
+            <div class="calcInput"> 100 x 100 =</div>
+            <div class="output"> 10000</div>
+        </div>
+        <div class="extraKeys">
+            <div class="clear"> Clear </div>
+            <div class="extra"> Delete </div>
+        </div>
+        <div class="keypad">
+            <div class="7 btn"> 7 </div>
+            <div class="8 btn"> 8 </div>
+            <div class="9 btn"> 9 </div>
+            <div class="divide btn"> ÷ </div>
+            <div class="4 btn"> 4 </div>
+            <div class="5 btn"> 5 </div>
+            <div class="6 btn"> 6 </div>
+            <div class="multiply btn"> × </div>
+            <div class="1 btn"> 1</div> 
+            <div class="2 btn"> 2 </div>   
+            <div class="3 btn"> 3 </div>   
+            <div class="minus btn"> - </div>
+            <div class="0 btn"> 0 </div> 
+            <div class=". btn"> . </div>   
+            <div class="equal btn"> = </div>   
+            <div class="plus btn"> + </div>            
+        </div>
+    </div>    
 </body>
 </html>
