Fix class naming for buttons and add mouseover effect

--- a/index.html
+++ b/index.html
@@ -19,20 +19,20 @@
             <div class="extra"> Delete </div>
         </div>
         <div class="keypad">
-            <div class="7 btn"> 7 </div>
-            <div class="8 btn"> 8 </div>
-            <div class="9 btn"> 9 </div>
+            <div class="seven btn"> 7 </div>
+            <div class="eight btn"> 8 </div>
+            <div class="nine btn"> 9 </div>
             <div class="divide btn"> ÷ </div>
-            <div class="4 btn"> 4 </div>
-            <div class="5 btn"> 5 </div>
-            <div class="6 btn"> 6 </div>
+            <div class="four btn"> 4 </div>
+            <div class="five btn"> 5 </div>
+            <div class="six btn"> 6 </div>
             <div class="multiply btn"> × </div>
-            <div class="1 btn"> 1</div> 
-            <div class="2 btn"> 2 </div>   
-            <div class="3 btn"> 3 </div>   
+            <div class="one btn"> 1</div> 
+            <div class="two btn"> 2 </div>   
+            <div class="three btn"> 3 </div>   
             <div class="minus btn"> - </div>
-            <div class="0 btn"> 0 </div> 
-            <div class=". btn"> . </div>   
+            <div class="zero btn"> 0 </div> 
+            <div class="dot btn"> . </div>   
             <div class="equal btn"> = </div>   
             <div class="plus btn"> + </div>            
         </div>
