--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <div class="output"> 10000</div>
         </div>
         <div class="extraKeys">
-            <div class="clear"> Clear </div>
-            <div class="extra"> Delete </div>
+            <div class="clear btn"> Clear </div>
+            <div class="delete btn"> Delete </div>
         </div>
         <div class="keypad">
             <div class="seven btn"> 7 </div>
