Add capability to allow for consecutive calculations

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     <div id="calculator">
         <div class="display"> 
-            <div class="calcInput"> 100 x 100 =</div>
-            <div class="output"></div>
+            <div class="formulaDisplay"></div>
+            <div class="numDisplay"></div>
         </div>
         <div class="extraKeys">
             <div class="clear eBtn"> Clear </div>
@@ -22,19 +22,19 @@
             <div class="seven btn">7</div>
             <div class="eight btn">8</div>
             <div class="nine btn">9</div>
-            <div class="divide btn">÷</div>
+            <div class="divide op">÷</div>
             <div class="four btn">4</div>
             <div class="five btn">5</div>
             <div class="six btn">6</div>
-            <div class="multiply btn">x</div>
+            <div class="multiply op">x</div>
             <div class="one btn">1</div> 
             <div class="two btn">2</div>   
             <div class="three btn">3</div>   
-            <div class="subtract btn">-</div>
+            <div class="subtract op">-</div>
             <div class="zero btn">0</div> 
             <div class="dot btn">.</div>   
-            <div class="equal btn">=</div>   
-            <div class="plus btn">+</div>            
+            <div class="equal op">=</div>   
+            <div class="plus op">+</div>            
         </div>
     </div>    
 </body>
