Add support for numpad input

--- a/index.html
+++ b/index.html
@@ -19,22 +19,22 @@
             <div class="delete eBtn"> Delete </div>
         </div>
         <div class="keypad">
-            <div class="seven btn">7</div>
-            <div class="eight btn">8</div>
-            <div class="nine btn">9</div>
-            <div class="divide op">÷</div>
-            <div class="four btn">4</div>
-            <div class="five btn">5</div>
-            <div class="six btn">6</div>
-            <div class="multiply op">x</div>
-            <div class="one btn">1</div> 
-            <div class="two btn">2</div>   
-            <div class="three btn">3</div>   
-            <div class="subtract op">-</div>
-            <div class="zero btn">0</div> 
-            <div class="dot btn">.</div>   
-            <div class="equal op">=</div>   
-            <div class="plus op">+</div>            
+            <div data-key="55" data-numpad="103" class="seven btn">7</div>
+            <div data-key="56" data-numpad="104" class="eight btn">8</div>
+            <div data-key="57" data-numpad="105" class="nine btn">9</div>
+            <div data-key="191" data-numpad="111" class="divide op">÷</div>
+            <div data-key="52" data-numpad="100" class="four btn">4</div>
+            <div data-key="53" data-numpad="101" class="five btn">5</div>
+            <div data-key="54" data-numpad="102" class="six btn">6</div>
+            <div data-key="56" data-numpad="106" class="multiply op">x</div>
+            <div data-key="49" data-numpad="97" class="one btn">1</div> 
+            <div data-key="50" data-numpad="98"class="two btn">2</div>   
+            <div data-key="51" data-numpad="99" class="three btn">3</div>   
+            <div data-key="189" data-numpad="109" class="subtract op">-</div>
+            <div data-key="48" data-numpad="96" class="zero btn">0</div> 
+            <div data-key="190" data-numpad="110" class="dot btn">.</div>   
+            <div data-key="187" data-numpad="13" class="equal op">=</div>   
+            <div data-numpad="107" class="plus op">+</div>            
         </div>
     </div>    
 </body>
