Add clear and delete key functionality

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <div class="numDisplay"></div>
         </div>
         <div class="extraKeys">
-            <div class="clear eBtn"> Clear </div>
-            <div class="delete eBtn"> Delete </div>
+            <div data-numpad="46" class="clear eBtn"> Clear </div>
+            <div data-key="8" class="delete eBtn"> Delete </div>
         </div>
         <div class="keypad">
             <div data-key="55" data-numpad="103" class="seven btn">7</div>
